Version 0.3 - 2016-11-28
* Add support for goocanvas >= 2.0
* Add colors and font-desc properties to Calendar

Version 0.2 - 2015-02-11
* Bug fixes (see mercurial logs for details)

Version 0.1 - 2013-02-18
* Initial release