@@ -1,3 +1,5 @@
+* Add support for Python 3
+
 Version 0.3 - 2016-11-28
 * Add support for goocanvas >= 2.0
 * Add colors and font-desc properties to Calendar
